--- a/Homepage.html
+++ b/Homepage.html
@@ -8,14 +8,14 @@
 
 	<title>Liu Juntong's Homepage</title>
 <head/>
-<body background="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/5.jpg">
+<body background="CSE110-Assingment1/5.1.jpg">
 	<header>
 		<ul>
 			<li><a href="">Homepage<a/><li/>
 			<li><a href="">Hobbies<a/><li/>
 			<li><a href="">Contact Me<a/><li/>
 		<ul/>
-	</header>
+	<header/>
 	<section>
 	<section/>
 	<footer>
