--- a/Hobbies.html
+++ b/Hobbies.html
@@ -8,14 +8,14 @@
 
 	<title>Liu Juntong's Hobbies</title>
 <head/>
-<body background="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/5.jpg">
+<body background="CSE110-Assingment1/5.1.jpg">
 	<header>
 		<ul>
 			<li><a href="">Homepage<a/><li/>
 			<li><a href="">Hobbies<a/><li/>
 			<li><a href="">Contact Me<a/><li/>
 		<ul/>
-	</header>
+	<header/>
 	<section>
 		<h5>My Hobbies<h5/>
 			<p>I like watching animate and movies, listening music and reading.<p/>
