--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="author" content="Juntong.Liu">
 	<meta name="keywords" content="HTML, Homepage, XJTLU, Liu Juntong">
 	<meta name="description" content="Personal Homepage">
-	<link rel="stylesheet" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Homepage Style.css">
+	<link rel="stylesheet" href="https://github.com/GerardLiu96/CSE110-Assingment1/blob/master/Homepage Style.css">
 	<title>Liu Juntong's Homepage</title>
 <head/>
 <body >
