--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
 	<meta name="author" content="Juntong.Liu">
 	<meta name="keywords" content="HTML, Homepage, XJTLU, Liu Juntong">
 	<meta name="description" content="Personal Homepage">
-	<link rel="stylesheet" href="https://github.com/GerardLiu96/CSE110-Assingment1/blob/master/Homepage Style.css">
+	<link rel="stylesheet" href="Homepage Style.css">
 	<title>Liu Juntong's Homepage</title>
 <head/>
 <body >
 	<header>
 	<div id="headers" >
 		<ul class="Tiul">
-			<li class="Tilic"><a class="Ta" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Homepage.html">Homepage<a/><li/>
-			<li class="Tili"><a class="Ta" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Hobbies.html">Hobbies<a/><li/>
-			<li class="Tili"><a class="Ta" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Contect Me.html">Contact Me<a/><li/>
+			<li class="Tilic"><a class="Ta" href="Homepage.html">Homepage<a/><li/>
+			<li class="Tili"><a class="Ta" href="Hobbies.html">Hobbies<a/><li/>
+			<li class="Tili"><a class="Ta" href="Contect Me.html">Contact Me<a/><li/>
 		<ul/>
 		<div/>
-	</header>
+	<header/>
 	<section>
 	<div id="bodypage" >
 	
@@ -26,8 +26,8 @@
 		<hr>
 		<br>
 			<ul class="lbul">
-				<li class="lblic"><a class="lba" href= "C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Homepage.html">Personal Information<a/></span><li/>
-				<li class="lbli"><a class="lba" href= "C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Experience.html">Experience<a/><li/>
+				<li class="lblic"><a class="lba" href= "Homepage.html">Personal Information<a/><li/>
+				<li class="lbli"><a class="lba" href= "Experience.html">Experience<a/><li/>
 				<div class="clearfix"></div>
 				<ul/>
 	<div/>
@@ -39,7 +39,7 @@
 				<p class="hrbp">Place of residence: Suzhou,Jiangsu province<p/>
 				<p class="hrbp">University: XJTLU(Xi-an Jiao Tong Liverpool University)<p/>
 				<p class="hrbp">Major: ICS(Information and Computing Science)<p/>
-				<img class="hp" src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/me.jpg">
+				<img class="hp" src="me.jpg">
 	<div/>
 	<section/>
 	<footer>
