--- a/Book.html
+++ b/Book.html
@@ -5,19 +5,19 @@
 	<meta name="author" content="Juntong.Liu">
 	<meta name="keywords" content="HTML, Homepage, XJTLU, Liu Juntong">
 	<meta name="description" content="Personal Homepage">
-	<link rel="stylesheet" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Homepage Style.css">
+	<link rel="stylesheet" href="Homepage Style.css">
 	<title>Liu Juntong's Hobbies</title>
 <head/>
 <body >
 	<header>
 	<div id="headers" >
 		<ul class="Tiul">
-			<li class="Tili"><a class="Ta" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Homepage.html">Homepage<a/><li/>
-			<li class="Tilic"><a class="Ta" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Hobbies.html">Hobbies<a/><li/>
-			<li class="Tili"><a class="Ta" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Contect Me.html">Contact Me<a/><li/>
+			<li class="Tili"><a class="Ta" href="Homepage.html">Homepage<a/><li/>
+			<li class="Tilic"><a class="Ta" href="Hobbies.html">Hobbies<a/><li/>
+			<li class="Tili"><a class="Ta" href="Contect Me.html">Contact Me<a/><li/>
 		<ul/>
 		<div/>
-	</header>
+	<header/>
 	<section>
 	<div id="bodypage" >
 	
@@ -26,10 +26,10 @@
 		<hr>
 			<p class="lbp">I like watching animate and movies, listening music and reading.<p/>
 			<ul class="lbul">
-				<li class="lbli"><a class="lba" href= "C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Hobbies.html">My favorite animates<a/></span><li/>
-				<li class="lbli"><a class="lba" href= "C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/movies.html">My favorite movies<a/><li/>
-				<li class="lbli"><a class="lba" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Music.html">My favorite musics<a/><li/>
-				<li class="lblic"><a class="lba" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Book.html">My favorite books<a/><li/>
+				<li class="lbli"><a class="lba" href= "Hobbies.html">My favorite animates<a/><li/>
+				<li class="lbli"><a class="lba" href= "movies.html">My favorite movies<a/><li/>
+				<li class="lbli"><a class="lba" href="Music.html">My favorite musics<a/><li/>
+				<li class="lblic"><a class="lba" href="Book.html">My favorite books<a/><li/>
 				<div class="clearfix"></div>
 				<ul/>
 	<div/>
@@ -37,15 +37,15 @@
 	<div class="right-col">
 				<ul class="rbul">
 					<li class="rbli"><cite>The Kite Runner<cite/>--Khaled Hosseini<li/>
-					<p><img class="brp" src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/24.jpg"><p/>
+					<p><img class="brp" src="24.jpg"><p/>
 					<li class="rbli"><cite>Hear the Wind Sing(風の歌を聴け)<cite/>--Haruki Murakami<li/>
-					<p><img class="brp" src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/25.jpg"><p/>
+					<p><img class="brp" src="25.jpg"><p/>
 					<li class="rbli"><cite>Miracles of the Namiya General Store(ナミヤ雑貨店の奇蹟)<cite/>--Keigo Higashino<li/>
-					<p><img class="brp" src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/26.jpg"><p/>
+					<p><img class="brp" src="26.jpg"><p/>
 					<li class="rbli"><cite>Kafka on the Shore(海辺のカフカ)<cite/>--Haruki Murakami<li/>
-					<p><img class="brp" src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/27.jpg"><p/>
+					<p><img class="brp" src="27.jpg"><p/>
 					<li class="rbli">Traditional Chinese myths<li/>
-					<p><img class="brp" src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/28.jpg"><p/>
+					<p><img class="brp" src="28.jpg"><p/>
 				<ul/>
 			<div/>
 			<div/>
