--- a/Contect Me.html
+++ b/Contect Me.html
@@ -5,19 +5,19 @@
 	<meta name="author" content="Juntong.Liu">
 	<meta name="keywords" content="HTML, Homepage, XJTLU, Liu Juntong">
 	<meta name="description" content="Personal Homepage">
-	<link rel="stylesheet" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Homepage Style.css">
+	<link rel="stylesheet" href="Homepage Style.css">
 	<title>Liu Juntong's Hobbies</title>
 <head/>
 <body >
 	<header>
 	<div id="headers" >
 		<ul class="Tiul">
-			<li class="Tili"><a class="Ta" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Homepage.html">Homepage<a/><li/>
-			<li class="Tili"><a class="Ta" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Hobbies.html">Hobbies<a/><li/>
-			<li class="Tilic"><a class="Ta" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Contect Me.html">Contact Me<a/><li/>
+			<li class="Tili"><a class="Ta" href="Homepage.html">Homepage<a/><li/>
+			<li class="Tili"><a class="Ta" href="Hobbies.html">Hobbies<a/><li/>
+			<li class="Tilic"><a class="Ta" href="Contect Me.html">Contact Me<a/><li/>
 		<ul/>
 		<div/>
-	</header>
+	<header/>
 	<section>
 	<div id="bodypage" >
 	
@@ -26,8 +26,8 @@
 		<hr>
 		<br>
 			<ul class="lbul">
-				<li class="lblic"><a class="lba" href= "C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Contect Me.html">My contect information<a/></span><li/>
-				<li class="lbli"><a class="lba" href= "C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/ContectMS.html">Contect My School<a/><li/>
+				<li class="lblic"><a class="lba" href= "Contect Me.html">My contect information<a/><li/>
+				<li class="lbli"><a class="lba" href= "ContectMS.html">Contect My School<a/><li/>
 				<div class="clearfix"></div>
 				<ul/>
 	<div/>
@@ -38,7 +38,7 @@
 				<p class="hrbp">Personal e-mail:452005231@qq.com <p/>
 				<p class="hrbp">School e-mail:Juntong.Liu15@student.xjtlu.edu.cn <p/>
 				<p class="hrbp">My Wechat QR code<p/>
-				<p><img class="brp" src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/cm.jpg"><p/>
+				<p><img class="brp" src="cm.jpg"><p/>
 			<div/>
 			<div/>
 	<section/>
