--- a/Experience.html
+++ b/Experience.html
@@ -5,19 +5,19 @@
 	<meta name="author" content="Juntong.Liu">
 	<meta name="keywords" content="HTML, Homepage, XJTLU, Liu Juntong">
 	<meta name="description" content="Personal Homepage">
-	<link rel="stylesheet" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Homepage Style.css">
+	<link rel="stylesheet" href="Homepage Style.css">
 	<title>Liu Juntong's Homepage</title>
 <head/>
 <body >
 	<header>
 	<div id="headers" >
 		<ul class="Tiul">
-			<li class="Tilic"><a class="Ta" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Homepage.html">Homepage<a/><li/>
-			<li class="Tili"><a class="Ta" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Hobbies.html">Hobbies<a/><li/>
-			<li class="Tili"><a class="Ta" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Contect Me.html">Contact Me<a/><li/>
+			<li class="Tilic"><a class="Ta" href="Homepage.html">Homepage<a/><li/>
+			<li class="Tili"><a class="Ta" href="Hobbies.html">Hobbies<a/><li/>
+			<li class="Tili"><a class="Ta" href="Contect Me.html">Contact Me<a/><li/>
 		<ul/>
 		<div/>
-	</header>
+	<header/>
 	<section>
 	<div id="bodypage" >
 	
@@ -26,9 +26,8 @@
 		<hr>
 		<br>
 			<ul class="lbul">
-				<li class="lbli"><a class="lba" href= "C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Homepage.html">Personal Information<a/></span><li/>
-				<li class="lblic"><a class="lba" href= "C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Experience.html">Experience<a/><li/>
-				<li class="lbli"><a class="lba" href="">Self-introduction<a/><li/>
+				<li class="lbli"><a class="lba" href= "Homepage.html">Personal Information<a/><li/>
+				<li class="lblic"><a class="lba" href= "Experience.html">Experience<a/><li/>
 				<div class="clearfix"></div>
 				<ul/>
 	<div/>
