--- a/Hobbies.html
+++ b/Hobbies.html
@@ -5,19 +5,19 @@
 	<meta name="author" content="Juntong.Liu">
 	<meta name="keywords" content="HTML, Homepage, XJTLU, Liu Juntong">
 	<meta name="description" content="Personal Homepage">
-	<link rel="stylesheet" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Homepage Style.css">
+	<link rel="stylesheet" href="Homepage Style.css">
 	<title>Liu Juntong's Hobbies</title>
 <head/>
 <body >
 	<header>
 	<div id="headers" >
 		<ul class="Tiul">
-			<li class="Tili"><a class="Ta" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Homepage.html">Homepage<a/><li/>
-			<li class="Tilic"><a class="Ta" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Hobbies.html">Hobbies<a/><li/>
-			<li class="Tili"><a class="Ta" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Contect Me.html">Contact Me<a/><li/>
+			<li class="Tili"><a class="Ta" href="Homepage.html">Homepage<a/><li/>
+			<li class="Tilic"><a class="Ta" href="Hobbies.html">Hobbies<a/><li/>
+			<li class="Tili"><a class="Ta" href="Contect Me.html">Contact Me<a/><li/>
 		<ul/>
 		<div/>
-	</header>
+	<header/>
 	<section>
 	<div id="bodypage" >
 	
@@ -26,10 +26,10 @@
 		<hr>
 			<p class="lbp">I like watching animate and movies, listening music and reading.<p/>
 			<ul class="lbul">
-				<li class="lblic"><a class="lba" href= "C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Hobbies.html">My favorite animates<a/></span><li/>
-				<li class="lbli"><a class="lba" href= "C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/movies.html">My favorite movies<a/><li/>
-				<li class="lbli"><a class="lba" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Music.html">My favorite musics<a/><li/>
-				<li class="lbli"><a class="lba" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Book.html">My favorite books<a/><li/>
+				<li class="lblic"><a class="lba" href= "Hobbies.html">My favorite animates<a/><li/>
+				<li class="lbli"><a class="lba" href= "movies.html">My favorite movies<a/><li/>
+				<li class="lbli"><a class="lba" href="Music.html">My favorite musics<a/><li/>
+				<li class="lbli"><a class="lba" href="Book.html">My favorite books<a/><li/>
 				<div class="clearfix"></div>
 				<ul/>
 	<div/>
@@ -37,14 +37,14 @@
 	<div class="right-col">
 				<dl class="bdl">
 					<dt class="bdt"><a href="https://en.wikipedia.org/wiki/Hy%C5%8Dka"target="_blank"><cite>Hyouka<cite/><a/> by Kyoto Animation<dt/>
-					<dd><img src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/7.jpg" style="width:50%;height:50%;"><dd/>
+					<dd><img src="7.jpg" style="width:50%;height:50%;"><dd/>
 					<dt class="bdt"><a href="https://en.wikipedia.org/wiki/Steins;Gate_(anime)"target="_blank"><cite>Steins;Gate<cite/><a/> by WHITE FOX<dt/>
-					<dd><img src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/9.jpg" style="width:50%;height:50%;"><dd/>
+					<dd><img src="9.jpg" style="width:50%;height:50%;"><dd/>
 					<dt class="bdt"><a href="https://en.wikipedia.org/wiki/Natsume%27s_Book_of_Friends"target="_blank"><cite>Natsume's Book of Friends<cite/><a/>
 					by Brain's Base. Original author Yuki Midorikawa<dt/>
-					<dd><img src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/10.jpg" style="width:50%;height:40%;"><dd/>
+					<dd><img src="10.jpg" style="width:50%;height:40%;"><dd/>
 					<dt class="bdt"><a href="https://en.wikipedia.org/wiki/Your_Name"target="_blank"><cite>Your Name<cite/><a/> by  Makoto Shinkai<dt/>
-					<dd><img src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/11.jpg" style="width:50%;height:50%;"><dd/>
+					<dd><img src="11.jpg" style="width:50%;height:50%;"><dd/>
 				<dl/>
 			<div/>
 			<div/>
