--- a/Music.html
+++ b/Music.html
@@ -5,19 +5,19 @@
 	<meta name="author" content="Juntong.Liu">
 	<meta name="keywords" content="HTML, Homepage, XJTLU, Liu Juntong">
 	<meta name="description" content="Personal Homepage">
-	<link rel="stylesheet" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Homepage Style.css">
+	<link rel="stylesheet" href="Homepage Style.css">
 	<title>Liu Juntong's Hobbies</title>
 <head/>
 <body >
 	<header>
 	<div id="headers" >
 		<ul class="Tiul">
-			<li class="Tili"><a class="Ta" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Homepage.html">Homepage<a/><li/>
-			<li class="Tilic"><a class="Ta" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Hobbies.html">Hobbies<a/><li/>
-			<li class="Tili"><a class="Ta" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Contect Me.html">Contact Me<a/><li/>
+			<li class="Tili"><a class="Ta" href="Homepage.html">Homepage<a/><li/>
+			<li class="Tilic"><a class="Ta" href="Hobbies.html">Hobbies<a/><li/>
+			<li class="Tili"><a class="Ta" href="Contect Me.html">Contact Me<a/><li/>
 		<ul/>
 		<div/>
-	</header>
+	<header/>
 	<section>
 	<div id="bodypage" >
 	
@@ -26,10 +26,10 @@
 		<hr>
 			<p class="lbp">I like watching animate and movies, listening music and reading.<p/>
 			<ul class="lbul">
-				<li class="lbli"><a class="lba" href= "C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Hobbies.html">My favorite animates<a/></span><li/>
-				<li class="lbli"><a class="lba" href= "C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/movies.html">My favorite movies<a/><li/>
-				<li class="lblic"><a class="lba" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Music.html">My favorite musics<a/><li/>
-				<li class="lbli"><a class="lba" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Book.html">My favorite books<a/><li/>
+				<li class="lbli"><a class="lba" href= "Hobbies.html">My favorite animates<a/><li/>
+				<li class="lbli"><a class="lba" href= "movies.html">My favorite movies<a/><li/>
+				<li class="lblic"><a class="lba" href="Music.html">My favorite musics<a/><li/>
+				<li class="lbli"><a class="lba" href="Book.html">My favorite books<a/><li/>
 				<div class="clearfix"></div>
 				<ul/>
 	<div/>
@@ -37,17 +37,17 @@
 	<div class="right-col">
 				<ul class="rbul">
 					<li class="rbli">I'm Yours--Jason Mraz<li/>
-					<p><img class="rp" src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/18.jpg"><p/>
+					<p><img class="rp" src="18.jpg"><p/>
 					<li class="rbli">Up &#38 UP--Coldplay<li/>
-					<p><img class="rp" src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/19.jpg"><p/>
+					<p><img class="rp" src="19.jpg"><p/>
 					<li class="rbli">Zao Chun De Shu（早春的树）---Hongyu Cheng<li/>
-					<p><img class="rp" src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/20.jpg"><p/>
+					<p><img class="rp" src="20.jpg"><p/>
 					<li class="rbli">Someone Like You--Adele<li/>
-					<p><img class="rp" src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/21.jpg"><p/>
+					<p><img class="rp" src="21.jpg"><p/>
 					<li class="rbli">Dream Lantern(夢灯籠)--RADWIMPS (ラッドウィンプス)<li/>
-					<p><img class="rp" src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/22.jpg"><p/>
+					<p><img class="rp" src="22.jpg"><p/>
 					<li class="rbli">Too Bad--JJ Lin<li/>
-					<p><img class="rp" src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/23.jpg"><p/>
+					<p><img class="rp" src="23.jpg"><p/>
 				<ul/>
 			<div/>
 			<div/>
