--- a/movies.html
+++ b/movies.html
@@ -5,19 +5,19 @@
 	<meta name="author" content="Juntong.Liu">
 	<meta name="keywords" content="HTML, Homepage, XJTLU, Liu Juntong">
 	<meta name="description" content="Personal Homepage">
-	<link rel="stylesheet" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Homepage Style.css">
+	<link rel="stylesheet" href="Homepage Style.css">
 	<title>Liu Juntong's Hobbies</title>
 <head/>
 <body >
 	<header>
 	<div id="headers" >
 		<ul class="Tiul">
-			<li class="Tili"><a class="Ta" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Homepage.html">Homepage<a/><li/>
-			<li class="Tilic"><a class="Ta" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Hobbies.html">Hobbies<a/><li/>
-			<li class="Tili"><a class="Ta" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Contect Me.html">Contact Me<a/><li/>
+			<li class="Tili"><a class="Ta" href="Homepage.html">Homepage<a/><li/>
+			<li class="Tilic"><a class="Ta" href="Hobbies.html">Hobbies<a/><li/>
+			<li class="Tili"><a class="Ta" href="Contect Me.html">Contact Me<a/><li/>
 		<ul/>
 		<div/>
-	</header>
+	<header/>
 	<section>
 	<div id="bodypage" >
 	
@@ -26,10 +26,10 @@
 		<hr>
 			<p class="lbp">I like watching animate and movies, listening music and reading.<p/>
 			<ul class="lbul">
-				<li class="lbli"><a class="lba" href= "C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Hobbies.html">My favorite animates<a/></span><li/>
-				<li class="lblic"><a class="lba" href= "C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/movies.html">My favorite movies<a/><li/>
-				<li class="lbli"><a class="lba" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Music.html">My favorite musics<a/><li/>
-				<li class="lbli"><a class="lba" href="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/Book.html">My favorite books<a/><li/>
+				<li class="lbli"><a class="lba" href= "Hobbies.html">My favorite animates<a/></span><li/>
+				<li class="lblic"><a class="lba" href= "movies.html">My favorite movies<a/><li/>
+				<li class="lbli"><a class="lba" href="Music.html">My favorite musics<a/><li/>
+				<li class="lbli"><a class="lba" href="Book.html">My favorite books<a/><li/>
 				<div class="clearfix"></div>
 				<ul/>
 	<div/>
@@ -38,18 +38,18 @@
 				<p class="rbp">Some of my favorite movies <p/>
 				<ul class="rbul">
 					<li class="rbli"><a href="https://en.wikipedia.org/wiki/List_of_films_based_on_Marvel_Comics"target="_blank">The films based on Marvel Comics<a/>
-					<p><img class="rp" src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/12.jpg"><p/>
+					<p><img class="rp" src="12.jpg"><p/>
 					<p> &#40 I like Iron Man series especially.&#41 <p/><li/>
 					<li class="rbli"><a href="https://en.wikipedia.org/wiki/Inception"target="_blank"><cite>Inception<cite/><a/><li/>
-					<p><img class="rp" src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/13.jpg"><p/>
+					<p><img class="rp" src="13.jpg"><p/>
 					<li class="rbli"><a href="https://en.wikipedia.org/wiki/Harry_Potter_(film_series)"target="_blank">Harry Potter series<a/><li/>
-					<p><img class="rp" src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/14.jpg"><p/>
+					<p><img class="rp" src="14.jpg"><p/>
 					<li class="rbli"><a href="https://en.wikipedia.org/wiki/Titanic_(1997_film)"target="_blank"><cite>Titanic (1997 film)<cite/><a/><li/>
-					<p><img class="rp" src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/15.jpg"><p/>
+					<p><img class="rp" src="15.jpg"><p/>
 					<li class="rbli"><a href="https://en.wikipedia.org/wiki/The_Great_Gatsby_(2013_film)"target="_blank"><cite>The Great Gatsby (2013 film)<cite/><a/><li/>
-					<p><img class="rp" src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/16.jpg"><p/>
+					<p><img class="rp" src="16.jpg"><p/>
 					<li class="rbli"><a href="https://en.wikipedia.org/wiki/Life_of_Pi_(film)"target="_blank"><cite>Life of Pi<cite/><a/><li/>
-					<p><img class="rp" src="C:/Users/asusr/Desktop/CSE110 Human-Centric Computing/ass1/17.jpg"><p/>
+					<p><img class="rp" src="17.jpg"><p/>
 				<ul/>
 			<div/>
 			<div/>
