--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<p class="hrbp">Place of residence: Suzhou,Jiangsu province</p>
 				<p class="hrbp">University: XJTLU(Xi-an Jiao Tong Liverpool University)</p>
 				<p class="hrbp">Major: ICS(Information and Computing Science)</p>
-				<img class="hp" src="me.jpg">
+				<img class="hp" src="me.JPG">
 	</div>
 	</section>
 	<footer>
